# openclawconcierge

./: .gitignore  README.md
backend/: .env  .env.example  API.md  README.md  app.py  config.py  main.py  models.py  pyproject.toml  requirements.txt  schema.md  seed_data.py  setup_admin.py
backend/core/: config.py  database.py  models.py  plugin_base.py  plugin_manager.py  security.py
backend/core/routes/: api_keys.py  auth.py  plugins.py
backend/plugins/: plugins.yaml
backend/plugins/careers/: __init__.py
backend/plugins/concerts/: __init__.py
backend/plugins/events/: __init__.py
backend/plugins/news/: __init__.py
backend/routes/: auth.py  career.py  concerts.py  events.py  news.py
concierge/: SKILL.md  _meta.json  concierge-cli.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ItemCard.jsx  Layout.jsx  Modal.jsx  Pagination.jsx
frontend/src/components/ui/: Badge.jsx  DataTable.jsx  IconButton.jsx  index.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Career.jsx  Concerts.jsx  Dashboard.jsx  Events.jsx  Login.jsx  News.jsx
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
