[project]
name = "backend"
version = "0.1.0"
description = "OpenClaw Concierge Dashboard Backend"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-jwt-extended>=4.6.0",
    "flask-cors>=4.0.0",
    "werkzeug>=3.0.0",
    "python-dotenv>=1.0.0",
]
